# recon-bench

./: .gitignore  README.md  pyproject.toml
docs/: specs.md
examples/: image_vs_image.py
src/recon_bench/: __init__.py  _types.py  evaluate.py
src/recon_bench/cli/: __init__.py  eval_images.py  eval_pcd.py  visualize_pcd.py
src/recon_bench/io/: __init__.py  geometry.py  image.py  tabular.py
src/recon_bench/metrics/: __init__.py  core.py  geometry.py  image.py
src/recon_bench/profiling/: __init__.py  _format.py  _types.py  memory.py  profile.py  timer.py
src/recon_bench/rendering/: __init__.py  camera.py  renderer.py
src/recon_bench/utils/: __init__.py  batch.py  format.py  image.py  pointcloud.py
